added docs, api stuff, packages, migrated original repo to this repo

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,16 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="description" content="Il Sapore dell'Italia" />
+      <meta property="og:title" content="Il Sapore dell'Italia" />
+      <meta
+         property="og:description"
+         content="Welcome to Il Sapore dell'Italia, the best Italian restaurant in town."
+      />
+      <meta property="og:type" content="website" />
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:title" content="Il Sapore dell'Italia" />
+      <meta name="twitter:description" content="Enjoy authentic Italian cuisine at Il Sapore dell'Italia." />
       <title>La Sapore Dell'Italia</title>
 
       <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -25,8 +35,17 @@
          sizes="16x16"
          href="./static/assets/icons/favicons/favicon-16x16.png"
       />
+      <link
+         rel="preload"
+         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+         as="style"
+         onload="this.rel='stylesheet'"
+      />
+      <noscript>
+         <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" />
+      </noscript>
 
-      <script defer src="%PUBLIC_URL%/static/js/bundle.js"></script>
+      <script defer src="./bundle.js"></script>
    </head>
    <body>
       <noscript>
