added auth private public routes, working on login/registering stuff

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
       <meta property="og:type" content="website" />
       <meta name="twitter:card" content="summary_large_image" />
       <meta name="twitter:title" content="Il Sapore dell'Italia" />
-      <meta name="twitter:description" content="Enjoy authentic Italian cuisine at Il Sapore dell'Italia." />
+      <meta
+         name="twitter:description"
+         content="Enjoy authentic Italian cuisine at Il Sapore dell'Italia."
+      />
       <title>La Sapore Dell'Italia</title>
 
       <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,19 +24,19 @@
       <link
          rel="apple-touch-icon"
          sizes="180x180"
-         href="./static/assets/icons/favicons/apple-touch-icon.png"
+         href="/static/assets/icons/favicons/apple-touch-icon.png"
       />
       <link
          rel="icon"
          type="image/png"
          sizes="32x32"
-         href="./static/assets/icons/favicons/favicon-32x32.png"
+         href="/static/assets/icons/favicons/favicon-32x32.png"
       />
       <link
          rel="icon"
          type="image/png"
          sizes="16x16"
-         href="./static/assets/icons/favicons/favicon-16x16.png"
+         href="/static/assets/icons/favicons/favicon-16x16.png"
       />
       <link
          rel="preload"
@@ -42,15 +45,20 @@
          onload="this.rel='stylesheet'"
       />
       <noscript>
-         <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" />
+         <link
+            rel="stylesheet"
+            href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+         />
       </noscript>
 
-      <script defer src="./bundle.js"></script>
+      <script defer src="/bundle.js"></script>
    </head>
    <body>
       <noscript>
          <div id="n_script_c">
-            <div id="n_script_h">Please enable JavaScript to view this website.</div>
+            <div id="n_script_h">
+               Please enable JavaScript to view this website.
+            </div>
          </div>
       </noscript>
       <script nomodule>
