working on login, registration css

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
          />
       </noscript>
 
-      <script defer src="/bundle.js"></script>
+      <script defer src="dist/bundle.js"></script>
    </head>
    <body>
       <noscript>
