working on jwt generation

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
             href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
          />
       </noscript>
+      <style></style>
 
       <script defer src="dist/bundle.js"></script>
    </head>
