added authentication, working on footer

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
       </noscript>
       <style></style>
 
-      <script defer src="dist/bundle.js"></script>
+      <script defer src="/dist/bundle.js"></script>
    </head>
    <body>
       <noscript>
